--- a/views/index/gallery.ejs
+++ b/views/index/gallery.ejs
@@ -1,3 +1,11 @@
 this is gallery page
 
-<a href="/gallery/itemID"><h1>showProduct</h1></a>
+<% products.forEach(product=>{ %>
+    <div>
+        <h1><%=product.name%></h1>
+        <h2><%=product.price%></h2>
+        <h2><%=product.category%></h2>
+        <img src="<%= product.imagPaths[0] %>" width="300">
+        <a href="/gallery/<%= product.id %>"><h1>showProduct</h1></a>
+    </div>
+<% }) %> 
