--- a/views/admin/_headder.ejs
+++ b/views/admin/_headder.ejs
@@ -1,16 +1,21 @@
-<div>
-    <a href="/"><h1>Home</h1></a>
-</div>
-<div>
-    <a href="/admin/gallery"><h1>all products</h1></a>
-</div>
-<div>
-    <a href="/admin/dashboard"><h1>account</h1></a>
-</div>
-<div>
-    <a href="/admin/new"><h1>add product</h1></a>
-</div>
-<div>
-    <a href="/admin/logout"><h1>log out</h1></a>
+<div class="row">
+    <div class="col-md-1">
+
+    </div>
+    <div class="col-md-2">
+        <a href="/"><h1>Home</h1></a>
+    </div>
+    <div class="col-md-2">
+        <a href="/admin/gallery"><h1>all products</h1></a>
+    </div>
+    <div class="col-md-2">
+        <a href="/admin/dashboard"><h1>account</h1></a>
+    </div>
+    <div class="col-md-2">
+        <a href="/admin/new"><h1>add product</h1></a>
+    </div>
+    <div class="col-md-2">
+        <a href="/admin/logout"><h1>log out</h1></a>
+    </div>
 </div>
 <hr>
