--- a/views/index/_headder.ejs
+++ b/views/index/_headder.ejs
@@ -1,7 +1,12 @@
-<div>
-    <a href="/"><h1>Home</h1></a>
-</div>
-<div>
-    <a href="/gallery"><h1>Gallery</h1></a>
+<div class="row">
+    <div class="col-md-1">
+        
+    </div>
+    <div class="col-md-3"> 
+        <a href="/"><h1>Home</h1></a> 
+    </div>
+    <div class="col-md-3">
+        <a href="/gallery"><h1>Gallery</h1></a>
+    </div>
 </div>
 <hr>
