--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,1 +1,16 @@
 user login page
+
+<div>
+    <form action="/user/login" method="POST">
+    
+    <div>
+        <label>Email</label>
+        <input type="email" name="email">
+    </div>
+    <div>
+        <label>Password</label>
+        <input type="password" name="password">
+    </div>
+    <button type="submit">SIGN IN</button>
+    </form>
+</div>
