--- a/views/user/signUp.ejs
+++ b/views/user/signUp.ejs
@@ -1,1 +1,31 @@
-sign up page
+<form action="/user/signup" method="POST">
+    <div>
+        <label>First Name</label>
+        <input type="text" name="firstName" required>
+    </div>
+    <div>
+        <label>Last Name</label>
+        <input type="text" name="lastName" required>
+    </div>
+    <div>
+        <label>Address 1st Line</label>
+        <input type="text" name="address1st" required>
+    </div>
+    <div>
+        <label>address 2nd Line</label>
+        <input type="text" name="address2nd" required>
+    </div>
+    <div>
+        <label>Email</label>
+        <input type="email" name="email" required>
+    </div>
+    <div>
+        <label>Mobile</label>
+        <input type="tel" name="mobile" required>
+    </div>
+    <div>
+        <label>Password</label>
+        <input type="password" name="password" required>
+    </div>
+    <button type="submit">sign up</button>
+</form>
