--- a/views/admin/_headder.ejs
+++ b/views/admin/_headder.ejs
@@ -1,21 +1,74 @@
-<div class="row">
-    <div class="col-md-1">
 
+<!-- ##### Header Area Start ##### -->
+<header class="header-area">
+
+    <!-- ***** Top Header Area ***** -->
+    <div class="top-header-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="top-header-content d-flex align-items-center justify-content-between">
+                        <!-- Top Header Content -->
+                        <div class="top-header-meta">
+                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="infodeercreative@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span>Email: infodeercreative@gmail.com</span></a>
+                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="+1 234 122 122"><i class="fa fa-phone" aria-hidden="true"></i> <span>Call Us: +1 234 122 122</span></a>
+                        </div>
+
+                        <!-- Top Header Content -->
+                        <div class="top-header-meta d-flex">
+                            <!-- Login -->
+                            <div class="login">
+                                <a href="/admin/logout"><i class="fa fa-user" aria-hidden="true"></i> <span>LogOut</span></a>
+                            </div>
+                            <!-- account -->
+                            <div class="login">
+                                <a href="/admin/dashboard"><i class="fa fa-user" aria-hidden="true"></i> <span>Account</span></a>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-2">
-        <a href="/"><h1>Home</h1></a>
+
+    <!-- ***** Navbar Area ***** -->
+    <div class="alazea-main-menu">
+        <div class="classy-nav-container breakpoint-off">
+            <div class="container">
+                <!-- Menu -->
+                <nav class="classy-navbar justify-content-between" id="alazeaNav">
+
+                    <!-- Nav Brand -->
+                    <a href="/" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
+
+                    <!-- Navbar Toggler -->
+                    <div class="classy-navbar-toggler">
+                        <span class="navbarToggler"><span></span><span></span><span></span></span>
+                    </div>
+
+                    <!-- Menu -->
+                    <div class="classy-menu">
+
+                        <!-- Close Button -->
+                        <div class="classycloseIcon">
+                            <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                        </div>
+
+                        <!-- Navbar Start -->
+                        <div class="classynav">
+                            <ul>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="/admin/gallery">All Products</a></li>
+                                <li><a href="/admin/new">New Product</a></li>
+                                <li><a href="/admin/dashboard">Account</a></li>
+                            </ul>
+                        </div>
+                        <!-- Navbar End -->
+                    </div>
+                </nav>
+            </div>
+        </div>
     </div>
-    <div class="col-md-2">
-        <a href="/admin/gallery"><h1>all products</h1></a>
-    </div>
-    <div class="col-md-2">
-        <a href="/admin/dashboard"><h1>account</h1></a>
-    </div>
-    <div class="col-md-2">
-        <a href="/admin/new"><h1>add product</h1></a>
-    </div>
-    <div class="col-md-2">
-        <a href="/admin/logout"><h1>log out</h1></a>
-    </div>
-</div>
-<hr>
+</header>
+<!-- ##### Header Area End ##### -->
