--- a/views/admin/gallery.ejs
+++ b/views/admin/gallery.ejs
@@ -1,12 +1,49 @@
-product gallery
 
-<% products.forEach(product=>{ %>
-    <div>
-        <h1><%=product.name%></h1>
-        <h2><%=product.price%></h2>
-        <h2><%=product.category%></h2>
-        <img src="<%= product.imagPaths[0] %>" width="300">
-        <a href="/admin/gallery/<%= product.id %>"><h1>edit</h1></a>
-        <a href="/admin/removeproduct/<%= product.id %>"><h1>remove</h1></a>
+<!-- ##### Shop Area Start ##### -->
+<section class="shop-page section-padding-0-100">
+    <div class="container">
+        <div class="row">
+            <!-- All Products Area -->
+            
+            <div>
+                <div class="shop-products-area">
+                    <div class="row">
+
+                        <!-- Single Product Area -->
+                        <% products.forEach(product=>{ %>
+                            
+                            <div class="col-12 col-sm-6 col-lg-4">
+                                <div class="single-product-area mb-50">
+                                    <!-- Product Image -->
+                                    <div class="product-img">
+                                        <img src="<%= product.imagPaths[0] %>">"
+                                        <!-- Product Tag -->
+                                        <div class="product-tag">
+                                            <a href="#"><%=product.category%></a>
+                                        </div>
+                                    </div>
+                                    <!-- Product Info -->
+                                    <div class="product-info mt-15 text-center">
+                                        <h3><%=product.name%></h3>
+                                        <h6>RS: <%=product.price%>.00/=</h6>
+                                        <form action="/admin/gallery/<%= product.id %>" method="GET">
+                                            <button type="submit" class="btn btn-outline-warning">Edit Product</button>
+                                        </form>
+                                        <form action="/admin/removeproduct/<%= product.id %>" method="GET">
+                                            <button type="submit" class="btn btn-outline-danger">Delete Product</button>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        <% }) %> 
+                        
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
-<% }) %>
+</section>
+<!-- ##### Shop Area End ##### -->
