--- a/views/index/_headder.ejs
+++ b/views/index/_headder.ejs
@@ -1,28 +1,86 @@
-<div class="row">
-    <div class="col-md-1">
-        
-    </div>
-    <div class="col-md-3"> 
-        <a href="/"><h1>Home</h1></a> 
-    </div>
-    <div class="col-md-3">
-        <a href="/gallery"><h1>Gallery</h1></a>
-    </div>
-    <div class="col-md-2">
-        <% if(locals.user){ %>
-            <a href="/user/dashboard"><h1><%= user.firstName %> </h1></a>
-        <%}else{%>
-            <a href="/user/login"><h1>login</h1></a>
-        <%}%> 
-    </div>
-    <div class="col-md-2">
-        <% if(locals.user){ %>
-            <a href="/user/logout"><h1> Log Out</h1></a>
-        <%}else{%>
-            <a href="/user/signup"><h1> Sign Up</h1></a>
-        <%}%> 
-    </div>
-</div>
 
 
-<hr>
+<!-- ##### Header Area Start ##### -->
+<header class="header-area">
+
+    <!-- ***** Top Header Area ***** -->
+    <div class="top-header-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="top-header-content d-flex align-items-center justify-content-between">
+                        <!-- Top Header Content -->
+                        <div class="top-header-meta">
+                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="infodeercreative@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span>Email: infodeercreative@gmail.com</span></a>
+                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="+1 234 122 122"><i class="fa fa-phone" aria-hidden="true"></i> <span>Call Us: +1 234 122 122</span></a>
+                        </div>
+
+                        <!-- Top Header Content -->
+                        <div class="top-header-meta d-flex">
+                            <% if(locals.user){ %>
+                                <!-- Login -->
+                                <div class="login">
+                                    <a href="/user/dashboard"><i class="fa fa-user" aria-hidden="true"></i> <span><%= user.firstName %></span></a>
+                                </div>
+                                <!-- Cart -->
+                            <div class="cart">
+                                <a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i> <span>Cart <span class="cart-quantity">(1)</span></span></a>
+                            </div>
+                            <%}else{%>
+                                <!-- Login -->
+                                <div class="login">
+                                    <a href="/user/login"><i class="fa fa-user" aria-hidden="true"></i> <span>Login</span></a>
+                                </div>
+                                <!-- sign up -->
+                                <div class="login">
+                                    <a href="/user/signup"><i class="fa fa-user" aria-hidden="true"></i> <span>SignUp</span></a>
+                                </div>
+                            <%}%> 
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ***** Navbar Area ***** -->
+    <div class="alazea-main-menu">
+        <div class="classy-nav-container breakpoint-off">
+            <div class="container">
+                <!-- Menu -->
+                <nav class="classy-navbar justify-content-between" id="alazeaNav">
+
+                    <!-- Nav Brand -->
+                    <a href="/" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
+
+                    <!-- Navbar Toggler -->
+                    <div class="classy-navbar-toggler">
+                        <span class="navbarToggler"><span></span><span></span><span></span></span>
+                    </div>
+
+                    <!-- Menu -->
+                    <div class="classy-menu">
+
+                        <!-- Close Button -->
+                        <div class="classycloseIcon">
+                            <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                        </div>
+
+                        <!-- Navbar Start -->
+                        <div class="classynav">
+                            <ul>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="/gallery">Shop</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                        <!-- Navbar End -->
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- ##### Header Area End ##### -->
