--- a/views/index/gallery.ejs
+++ b/views/index/gallery.ejs
@@ -1,11 +1,84 @@
-this is gallery page
 
-<% products.forEach(product=>{ %>
-    <div>
-        <h1><%=product.name%></h1>
-        <h2><%=product.price%></h2>
-        <h2><%=product.category%></h2>
-        <img src="<%= product.imagPaths[0] %>" width="300"> 
-        <a href="/gallery/<%= product.id %>"><h1>showProduct</h1></a>
+
+
+
+
+<!-- ##### Shop Area Start ##### -->
+<section class="shop-page section-padding-0-100">
+    <div class="container">
+        <div class="row">
+            <!-- Shop Sorting Data -->
+            <div class="col-12">
+                <div class="shop-sorting-data d-flex flex-wrap align-items-center justify-content-between">
+                    <!-- Shop Page Count -->
+                    <div class="shop-page-count">
+                        <p>Showing 1–9 of 72 results</p>
+                    </div>
+                    <!-- Search by Terms -->
+                    <div class="search_by_terms">
+                        <form action="#" method="post" class="form-inline">
+                            <select class="custom-select widget-title">
+                              <option selected>Short by Popularity</option>
+                              <option value="1">Short by Newest</option>
+                              <option value="2">Short by Sales</option>
+                              <option value="3">Short by Ratings</option>
+                            </select>
+                            <select class="custom-select widget-title">
+                              <option selected>Show: 9</option>
+                              <option value="1">12</option>
+                              <option value="2">18</option>
+                              <option value="3">24</option>
+                            </select>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <!-- All Products Area -->
+            
+            <div>
+                <div class="shop-products-area">
+                    <div class="row">
+
+                        <!-- Single Product Area -->
+                        <% products.forEach(product=>{ %>
+                            
+                            <div class="col-12 col-sm-6 col-lg-4">
+                                <div class="single-product-area mb-50">
+                                    <!-- Product Image -->
+                                    <div class="product-img">
+                                        <a href="/gallery/<%= product.id %>"><img src="<%= product.imagPaths[0] %>" alt=""></a>
+                                        <!-- Product Tag -->
+                                        <div class="product-tag">
+                                            <a href="#"><%=product.category%></a>
+                                        </div>
+                                        <div class="product-meta d-flex">
+                                            <a href="#" class="wishlist-btn"><i class="icon_heart_alt"></i></a>
+                                            <a href="cart.html" class="add-to-cart-btn">Add to cart</a>
+                                            <a href="#" class="compare-btn"><i class="arrow_left-right_alt"></i></a>
+                                        </div>
+                                    </div>
+                                    <!-- Product Info -->
+                                    <div class="product-info mt-15 text-center">
+                                        <a href="/gallery/<%= product.id %>">
+                                            <p><%=product.name%></p>
+                                        </a>
+                                        <h6><%=product.price%></h6>
+                                    </div>
+                                </div>
+                            </div>
+
+                        <% }) %> 
+
+                        
+   
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
-<% }) %> 
+</section>
+<!-- ##### Shop Area End ##### -->
