--- a/views/index/homePage.ejs
+++ b/views/index/homePage.ejs
@@ -26,19 +26,40 @@
         <!-- Single Hero Post -->
         <div class="single-hero-post bg-overlay">
             <!-- Post Image -->
-            <div class="slide-img bg-img" style="background-image: url(/public/img/2.jpg);"></div>
+            <div class="slide-img bg-img" style="background-image: url(/public/img/cover_02.jpg);"></div>
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12">
                         <!-- Post Content -->
-                        <div class="hero-slides-content text-center">
+                        <!-- <div class="hero-slides-content text-center">
                             <h2>Plantasy is the place for your 'plant-fantasy' and we will make you</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque ante nec ipsum iaculis, ac iaculis ipsum porttitor. Vivamus cursus nisl lectus, id mattis nisl lobortis eu. Duis diam augue, dapibus ut dolor at, mattis maximus dolor.</p>
                             <div class="welcome-btn-group">
                                 <a href="#" class="btn alazea-btn mr-30">Start Shopping</a>
                                 <a href="#" class="btn alazea-btn active">CONTACT US</a>
                             </div>
-                        </div>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Single Hero Post -->
+        <div class="single-hero-post bg-overlay">
+            <!-- Post Image -->
+            <div class="slide-img bg-img" style="background-image: url(/public/img/cover_01.jpg);"></div>
+            <div class="container h-100">
+                <div class="row h-100 align-items-center">
+                    <div class="col-12">
+                        <!-- Post Content -->
+                        <!-- <div class="hero-slides-content text-center">
+                            <h2>Plantasy is the place for your 'plant-fantasy' and we will make you</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque ante nec ipsum iaculis, ac iaculis ipsum porttitor. Vivamus cursus nisl lectus, id mattis nisl lobortis eu. Duis diam augue, dapibus ut dolor at, mattis maximus dolor.</p>
+                            <div class="welcome-btn-group">
+                                <a href="#" class="btn alazea-btn mr-30">Start Shopping</a>
+                                <a href="#" class="btn alazea-btn active">CONTACT US</a>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -104,15 +125,23 @@
                         </div>
                     </div>
 
+                    <!-- Single Service Area -->
+                    <div class="single-service-area d-flex align-items-center wow fadeInUp" data-wow-delay="500ms">
+                        
+                        <!-- Content -->
+                        <div class="service-content">
+                            <div class="alazea-video-area bg-overlay mb-100">
+                                <img src="/public/img/care_03.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
             <div class="col-12 col-lg-6">
                 <div class="alazea-video-area bg-overlay mb-100">
-                    <img src="/public/img/23.jpg" alt="">
-                    <a href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" class="video-icon">
-                        <i class="fa fa-play" aria-hidden="true"></i>
-                    </a>
+                    <img src="/public/img/care_01.jpg" alt="">
                 </div>
             </div>
         </div>
