--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,8 @@ Version: - v1.0
 /* :: 1.0 Import Fonts */
 @import url("https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800");
 /* :: 2.0 Import All CSS */
-@import url(public/css/bootstrap.min.css);
+/*@import url(/public/css/bootstrap.min.css);*/
+@import url(./CSS/bootstrap.min.css);
 @import url(/public/css/classy-nav.css);
 @import url(/public/css/owl.carousel.min.css);
 @import url(/public/css/animate.css);
