--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -1,36 +1,72 @@
-add new product page
-<form action="new" method="POST">
-<label>NAME</label>
-<input type="text" name="name" required>
+<br>
+<div class="container">
+    <form action="new" method="POST">
+        
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control" name="name" >
+                </div>
+                <div class="form-group">
+                    <label>PRICE</label>
+                    <input type="number" name="price" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <label>SIZE</label>
+                        </div>
+                        <div class="col-md-9">
+                            small:
+                            <input type="checkbox" name="small">
+                            medium:
+                            <input type="checkbox" name="medium">
+                            large:
+                            <input type="checkbox" name="large">
+                        </div>
+                    </div>
+                    
+                        
+                </div>
+                <div class="form-group">
+                    <label>CATEGORY</label>
+                    <select name="category" class="form-control">
+                        <option value="pot" class="form-control">pot</option>
+                        <option value="plant" class="form-control">plant</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label>DESCRIPTION</label>
+                <textarea name="description" cols="30" rows="10" required class="form-control"></textarea>
+            </div>
+        </div>
+        
+       
+        
+        <div class="row">
+            <!-- image 01 -->
+            <div class="col-md-4">
+                <label>IMAGE 1</label>
+                <input type="file" name="image1" class="filepond" required>
+        
+            </div>
+            <!-- image 02 -->
+            <div class="col-md-4">
+                <label>IMAGE 2</label>
+                <input type="file" name="image2" class="filepond">
+            </div>
+            <!-- image 03 -->
+            <div class="col-md-4">
+                <label>IMAGE 3</label>
+                <input type="file" name="image3" class="filepond">
+            </div>
+        </div>
+        
 
-<label>DESCRIPTION</label>
-<textarea name="description" cols="30" rows="10" required></textarea>
+        <button type="submit" class="btn btn-primary">ADD PRODUCT</button>
+        </form>
+</div>
 
-<label>PRICE</label>
-<input type="number" name="price" required>
-
-<label>SIZE</label>
-small:
-<input type="checkbox" name="small">
-medium:
-<input type="checkbox" name="medium">
-large:
-<input type="checkbox" name="large">
-
-<label>CATEGORY</label>
-<select name="category" >
-    <option value="pot">pot</option>
-    <option value="plant">plant</option>
-</select>
-
-<label>IMAGE 1</label>
-<input type="file" name="image1" class="filepond" required>
-
-<label>IMAGE 2</label>
-<input type="file" name="image2" class="filepond">
-
-<label>IMAGE 3</label>
-<input type="file" name="image3" class="filepond">
-
-<button type="submit">ADD PRODUCT</button>
-</form>
+<br>
