--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -42,7 +42,7 @@
         <div class="breadcrumb-area">
         <!-- Top Breadcrumb Area -->
         <div class="top-breadcrumb-area bg-img bg-overlay d-flex align-items-center justify-content-center" style="background-image: url(/public/img/24.jpg);">
-            <h2>Plantasys</h2>
+            <h2>Plantasy</h2>
         </div>
     </div>
     <% } %>  
@@ -77,27 +77,7 @@
 
                     <!-- Single Footer Widget -->
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <center>
-                        <div class="single-footer-widget">
-                            <div class="widget-title">
-                                <h5><center>QUICK LINK</center></h5>
-                            </div>
-                            <nav class="widget-nav">
-                                <ul>
-                                    <li><a href="#">Purchase</a></li>
-                                    <li><a href="#">FAQs</a></li>
-                                    <li><a href="#">Payment</a></li>
-                                    <li><a href="#">News</a></li>
-                                    <li><a href="#">Return</a></li>
-                                    <li><a href="#">Advertise</a></li>
-                                    <li><a href="#">Shipping</a></li>
-                                    <li><a href="#">Career</a></li>
-                                    <li><a href="#">Orders</a></li>
-                                    <li><a href="#">Policities</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </center>
+                        
                     </div>
 
 
