--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,16 +1,17 @@
 
+ <center>
+    <div class="row-cols-md-4">
+        <form class="form-signin" action="/user/login" method="POST">
+            <h1 class="h3 mb-3 font-weight-normal">User Login</h1>
+            <label class="sr-only">Email</label>
+            <input type="email" class="form-control" placeholder="Enter Email" name="email" >
+            <label  class="sr-only">Password</label>
+            <input type="password"  class="form-control" placeholder="Enter Password" name="password">
+            <br>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+    </div>
+ </center>
+<br>
 
-<div>
-    <form action="/user/login" method="POST">
-    
-    <div>
-        <label>Email</label>
-        <input type="email" name="email">
-    </div>
-    <div>
-        <label>Password</label>
-        <input type="password" name="password">
-    </div>
-    <button type="submit">SIGN IN</button>
-    </form>
-</div>
+
