--- a/views/index/_headder.ejs
+++ b/views/index/_headder.ejs
@@ -11,8 +11,6 @@
                     <div class="top-header-content d-flex align-items-center justify-content-between">
                         <!-- Top Header Content -->
                         <div class="top-header-meta">
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="infodeercreative@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span>Email: infodeercreative@gmail.com</span></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="+1 234 122 122"><i class="fa fa-phone" aria-hidden="true"></i> <span>Call Us: +1 234 122 122</span></a>
                         </div>
 
                         <!-- Top Header Content -->
@@ -24,7 +22,7 @@
                                 </div>
                                 <!-- Cart -->
                             <div class="cart">
-                                <a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i> <span>Cart <span class="cart-quantity">(1)</span></span></a>
+                                <a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i> <span>Cart <span class="cart-quantity">()</span></span></a>
                             </div>
                             <%}else{%>
                                 <!-- Login -->
