--- a/views/index/product.ejs
+++ b/views/index/product.ejs
@@ -1,29 +1,76 @@
-<div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-4">
-        <h1><%= product.name %></h1>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-4">
-        <img src="<%=product.imagPaths[0]%> " alt="product image" width="500" height="500">
-    </div>
-    <div class="col-md-4">
-        <h3><%= product.description %></h3>
-        <label >PRICE: <%= product.price %>.00/=</label>
-        
-        <form action="/cart/add/<%=product.id%>" method="POST">
-            <label>SIZE</label>
-            <select name="size" >
-                <option value="small" selected>small</option>
-                <option value="medium">medium</option>
-                <option value="large">large</option>
-            </select>
 
-            <label >Quantity</label>
-            <input type="number" name="quantity" value=1>
-            <button type="submit">ADD to CART</button>
-        </form>
-    </div>
-</div>
+
+<br>
+
+
+    <!-- ##### Single Product Details Area Start ##### -->
+    <section class="single_product_details_area mb-50">
+        <div class="produts-details--content mb-50">
+            <div class="container">
+                <div class="row justify-content-between">
+
+                    <div class="col-12 col-md-6 col-lg-5">
+                        <div class="single_product_thumb">
+                            <div id="product_details_slider" class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <a class="product-img" href="<%=product.imagPaths[0]%>" title="Product Image">
+                                        <img class="d-block w-100" src="<%=product.imagPaths[0]%>" alt="1">
+                                    </a>
+                                    </div>
+                                    <% if(product.imagPaths[1]) {%> 
+                                        <div class="carousel-item">
+                                            <a class="product-img" href="<%=product.imagPaths[1]%>" title="Product Image">
+                                            <img class="d-block w-100" src="<%=product.imagPaths[1]%>" alt="1">
+                                        </a>
+                                        </div>
+                                    <% } %> 
+                                    <% if(product.imagPaths[2]) {%> 
+                                        <div class="carousel-item">
+                                            <a class="product-img" href="<%=product.imagPaths[2]%>" title="Product Image">
+                                            <img class="d-block w-100" src="<%=product.imagPaths[2]%>" alt="1">
+                                        </a>
+                                        </div>
+                                    <% } %> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6">
+                        <div class="single_product_desc">
+                            <h4 class="title"><%= product.name %></h4>
+                            <h4 class="price">Rs: <%= product.price %>.00/=</h4>
+                            <div class="short_overview">
+                                <p><%= product.description %></p>
+                            </div>
+
+                            <div class="cart--area d-flex flex-wrap align-items-center">
+                                <!-- Add to Cart Form -->
+                                <form class="cart clearfix d-flex align-items-center" method="post" action="/cart/add/<%=product.id%>">
+                                    <div class="quantity">
+                                        <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                                        <input type="number" class="qty-text" id="qty" step="1" min="1" max="12" name="quantity" value="1">
+                                        <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                                    </div>
+                                    <div class="col-md-1"></div>
+                                    <div class="col-md-5">
+                                        <select name="size" class="form-control">
+                                            <option value="small" selected class="form-control">small</option>
+                                            <option value="medium" class="form-control">medium</option>
+                                            <option value="large" class="form-control">large</option>
+                                        </select>
+                                    </div>
+                                    
+                                    <button type="submit" name="addtocart" value="5" class="btn alazea-btn ml-15">Add to cart</button>
+                                </form>
+                                
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<br>
