orders view from user

--- a/views/admin/_headder.ejs
+++ b/views/admin/_headder.ejs
@@ -58,6 +58,7 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="/">Home</a></li>
+                                <li><a href="/">Orders</a></li>
                                 <li><a href="/admin/gallery">All Products</a></li>
                                 <li><a href="/admin/new">New Product</a></li>
                                 <li><a href="/admin/dashboard">Account</a></li>
