--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -7,6 +7,7 @@
             <th scope="col">Items</th>
             <th scope="col">State</th>
             <th scope="col">Total</th>
+            <th scope="col">Create Date</th>
           </tr>
         </thead>
         <tbody>
@@ -26,7 +27,10 @@
                         <%=order.state%> 
                     </td>
                     <td style="vertical-align: middle;">
-                        total
+                        <%=order.total%> 
+                    </td>
+                    <td style="vertical-align: middle;">
+                        <%=order.createdDate.getDate() %>/<%=order.createdDate.getMonth() %>/<%=order.createdDate.getFullYear() %>
                     </td>
                 </tr>
             <%})%>
